# dota-2-gsi-invoker

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  dota_2_gsi_invoker_config.json  gamestate_integration_dota_2_gsi_invoker.cfg
.github/workflows/: pull-request.yml  release.yml
src/: config.rs  embedded_assets.rs  gsi.rs  invoker.rs  main.rs  overlay.rs
