[package]
name = "dota_2_gsi_invoker"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1.0"
bytes = "1.7"
display-info = "0.5"
dota-gsi = "0.5"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["webp"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
winresource = "0.1"
